Fixed SharedSecrets refactoring in jake